[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "algs"
version = "0.0.1"
description = "Fundamental CS Algorithms based on the book 'Algorithms' by Sedgewick and Wayne."
readme = "README.rst"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE.txt"]

authors = [
  { name = "Bernard Roesler", email = "bernard.roesler@gmail.com" }
]

dependencies = [
  "matplotlib",
  "numpy>=2.0",
  "pandas>=2.2",
  "scipy",
  "seaborn",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "ipython",
  "pyqt5",
  "pytest",
  "pytest-env",
]

[tool.pytest.ini_options]
env = [
    "PYTHONHASHSEED=0",
]
