[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "algs"
version = "0.0.1"
description = "Fundamental CS Algorithms based on the book 'Algorithms' by Sedgewick and Wayne."
readme = "README.rst"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE.txt"]

authors = [
  { name = "Bernard Roesler", email = "bernard.roesler@gmail.com" }
]

dependencies = [
  "matplotlib",
  "numpy>=2.0",
  "pandas>=2.2",
  "scipy",
  "seaborn",
  "tqdm",
]

[project.optional-dependencies]
test = [
    "pytest-env",
    "pytest",
]

dev = [
    "ipython",
    "pre-commit",
    "pyarrow",
    "pyqt5",
    "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
env = [
    "PYTHONHASHSEED=0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
extend-select = [
    'B',    # flake8-bugbear
    'C4',   # flake8-comprehensions
    'D',    # docstring errors
    'E',    # pycodestyle errors
    'F',    # pyflakes errors
    'I',    # isort errors (import sorting)
    'ISC',  # flake8-implicit-str-concat
    'NPY',  # numpy-specific checks
    'PD',   # pandas-vet
    'PIE',  # flake8-pie
    'PL',   # pylint errors
    'PTH',  # use Path vs os
    'UP',   # pyupgrade
    'W',    # pycodestyle warnings (whitespace)
]

ignore = [
    'B028',     # No explicit `stacklevel` keyword argument found
    'B904',     # Within an `except` clause distinguish raised exceptions from errors in exception handling
    'B905',     # `zip()` without an explicit `strict=` parameter
    'D101',     # Missing docstring in public class (we use __doc__ a lot)
    'D104',     # Missing docstring in __init__
    'D105',     # Missing docstring in magic method
    'D205',     # 1 blank line required between summary line and description
    'E741',     # ambiguous variable name (l, O, I)
    'PIE790',   # Unnecessary `pass` statement
    'PLC2401',  # non-ASCII characters
    'PLR0912',  # too many branches (max-branches)
    'PLR0913',  # too many arguments (max-args)
    'PLR0915',  # too many statements (max-statements)
    'PLR2004',  # magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ['D', 'I001', 'F403', 'F405']  # ignore import sorting, wildcard imports, and undefined names
"test_*.py" = ['D101', 'D102', 'D103', 'D106', 'E501']  # ignore docstring checks in test files

[tool.ruff.lint.pydocstyle]
convention = "numpy"
